fixed footer nav gap on desktop

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -48,6 +48,7 @@ footer {
             
             grid-template-columns: auto 1fr;
             & nav {
+                gap: 0;
                 margin-left: auto;
 
                 & ul {
